<resources>
	<string name="app_Beenden"> finish App</string>
     <string name="app_einstellungenBearbeiten">Set application settings</string>
     <string name="app_zurueck">back</string>
     <string name="bearbeiten_Beenden">finish settings</string>
    <string name="hello">Hello World, ais map tcp plotter!</string>
    <string name="app_name">AISOSeaMapPlotter-057</string>
    <string name="title"> AIS OSeaM Plotter en</string>
    <string name="no_targets">no AIS-targets available</string>
    <string name="save_targetList">Save target list</string>
    <string name="confirmbutton">I confirm</string>
    <string name="startbutton">Map screen</string>
    <string name="startbuttonsplit">Split screen</string>
    <string name="datascreenbutton">Data screen</string>
	<string name="finishbutton">Finish</string>
	<string name="startpage_einstellungenAnzeigen">Settings</string>
	<string name="startpage_exportaisdata">Export AIS-data</string>
    <string name="startpage_showinfo">Show application info</string>
    <string name="startpage_pickmap">Choose map file</string>
    <string name="startpage_restore_cache">Choose restore file</string>
    <string name="startpage_show_logger">Show log</string>
  <string name="tracklist_info">Track list info</string>
  <string name="tracklist_no_tracks">no tracks in database</string>
	<string name="track_menu_delete">delete track</string>
	<string name="track_menu_save">save track</string>
    <string name="showactive">show</string>
	<string name="menu_delete">Delete target</string>
	<string name="menu_show">Show target on map</string>
	<string name="mmsi">MMSI</string>
	<string name="name">Name</string>
	<string name="confirm">OK</string>
	<string name="lat">LAT</string>
	<string name="lon">LON</string>
	<string name="sog">SOG</string>
	<string name="cog">COG</string>
	<string name="utc">UTC</string>
	<string name="navstatus">Nav. Status</string>
	<string name="shiptype">Type</string>
	<string name="showOnMap">Show on map</string>
	<string name="hasTrack">Has Track</string>
	<string name="noBlueTableInfoAvailable">no Blue table info available</string>
	<string name="blueTableNotSet">Blue Table is not set</string>
	<string name="blueTableIsSet">Blue Table is set</string>
	<string name="server_connected"> Connected to </string>
	<string name="server_not_connected"> no NMEA-Server found </string>
	<string name="start">Start</string>
	<string name="mapplotter_exit_question">Are you sure you want to exit?</string>
	<string name="mapplotter_exit_yes">yes</string>
	<string name="mapplotter_exit_no">no</string>
	<string name="aisItem_info1">received ago </string>
	<string name="show_targetList">Show target list</string>
    <string name="show_centermap">Show Map centered to ship</string>
	<string name="show_params">Show Properties Chooser</string>
	<string name="delete_old_targets">Delete old targets prior to</string>
	<string name="deactivate_old_targets">Deactivate old targets prior to</string>
	<string name="pick_map_file">Pick map file</string>
	<string name="showlog">Show Logger</string>
	<string name="showtracklist">Show track list</string>
	<string name="showspeedmarker">Show speed marker</string>
	<string name="hidespeedmarker">hide speed marker</string>
	<string name="showssattelitemap">Show satellite map</string>
	<string name="hidessattelitemap">Hide satellite map</string>
    <string name="menu_route">Route</string>
	<string name="menu_route_add">add RP</string>
	<string name="menu_route_delete">del RP</string>
	<string name="menu_route_finish">finish RT</string>
	<string name="menu_route_save"> Save RT</string>
	<string name="trace_route_stop">stop trace</string>
	<string name="trace_route_stop_info1">trace of route points with scale </string>
	<string name="trace_route_stop_info2">finished </string>
	<string name="trace_route_stop_info3">finished by user</string>
	<string name="trace_route_cannot_trace">can not trace Route while snap to own ship is on</string>
	<string name="trace_route_run_info1">center to trace point </string>
	<string name="trace_route_run_info2"> of </string>
	<string name="trace_route_run_info3"> with scale </string>
	<string name="route_tap_title">Routepoint</string>
	<string name="route_tap_info_waypoint">to next Waypoint </string>
	<string name="route_tap_info_distance">Distance:  </string>
	<string name="route_tap_info_course">Course: </string>
	<string name="route_tap_info_lastwaypoint">to last Waypoint </string>
	<string name="route_tap_info_sum_of_distance">Sum of Distance: </string>
	<string name="menu_alert_dialog_route_save_filename">filename</string>
	<string name="menu_alert_dialog_route_save_basedirectory">base directory</string>
	<string name="menu_alert_dialog_text_entry">Save the route to</string>
	<string name="menu_alert_dialog_ok">OK</string>
	<string name="menu_alert_dialog_cancel">Cancel</string>
	<string name="menu_screenshot">Screenshot</string>
	<string name="menu_screenshot_jpeg">JPEG (lossy)</string>
	<string name="menu_screenshot_png">PNG (lossless)</string>
	<string name="menu_show_data_screen">Show Data</string>
	<string name="menu_hide_data_screen">Hide Data</string>
	 <string-array name="preferences_map_generator_values">
		<item>Database renderer (offline)</item>
		<item>Mapnik (online)</item>
		<item>OpenStreetMap (online)</item>
		<item>OpenSeaMap (online)</item>
		<item>EniroMap (online)</item>
		<item>EniroNautical(SE) (online)</item>
		<item>EniroAerial(SE) (online)</item>
		<item>EniroAerial with seamarks(SE) (online)</item>
		<item>OpenCycleMap (online)</item>
	</string-array>
	<string name="preferences_cache_persistence">Cache persistence</string>
	<string name="preferences_cache_persistence_desc">Keep cached images on exit</string>
	<string name="preferences_log_tcp_data">log NMEA data</string>
	<string name="preferences_log_tcp_data_desc">log all incoming NMEA data</string>
    <string name="einstellungenbearbeiten_titel">Settings</string>
    <string name="einstellungenbearbeiten_shipName">Ship name</string>
    <string name="einstellungenbearbeiten_alarmradius">Alarm radius </string>
    <string name="einstellungenbearbeiten_verbindungsdatenTitel">Server connection</string>
    <string name="einstellungenbearbeiten_aisTitel">AIS-Settings</string>
    <string name="einstellungenbearbeiten_verbindungsdatenLogin">Login</string>
    <string name="einstellungenbearbeiten_verbindungsdatenPasswort">Password</string>
    <string name="einstellungenbearbeiten_verbindungsdatenServer">Server URL</string>
     <string name="einstellungenbearbeiten_verbindungsdatenServer_desc">Internet address of the  AIS/GPS-Server e.g. 192.168.1.1s</string>
    <string name="einstellungenbearbeiten_verbindungsdatenPort">Port </string>
    <string name="einstellungenbearbeiten_verbindungsdatenPort_desc">Port number of the AIS/GPS-Service (e.g. 9999 or 2947 for gpsd)</string>
    <string name="einstellungenbearbeiten_bt_verbindungsdatenServer">BT Server Address </string>
    <string name="einstellungenbearbeiten_mapLAT" > Map center LAT (N/S)</string>
    <string name="einstellungenbearbeiten_mapLON" > Map center LON (W/E)</string>
    <string name="einstellungenbearbeiten_shipLAT" > Ship Position LAT (N/S)</string>
    <string name="einstellungenbearbeiten_shipLON" > Ship Position LON (W/E)</string>
    <string name="einstellungenbearbeiten_deactivate_old_targets" > deactivate targets </string>
    <string name="einstellungenbearbeiten_deactivate_old_targets_desc" > targets older then 6 min will be deactivated automatically</string>
    <string name="einstellungenbearbeiten_delete_old_targets" > delete targets (older than 6 minutes)</string>
    <string name="einstellungenbearbeiten_delete_old_targets_desc" > deactivated targets will be delete after 6 min</string>
    <string name="einstellungenbearbeiten_show_own_ship_data" > show ship data</string>
    <string name="einstellungenbearbeiten_show_satellite_map" > show satellite map</string>
    <string name="einstellungenbearbeiten_use_gps_source" > set GPS-source</string>
    <string name="einstellungenbearbeiten_save_position_data" > save Position data</string>
    <string name="einstellungenbearbeiten_data_directory">data directory</string>
    <string name="einstellungenbearbeiten_data_directory_dec">Path to data directory</string>
    <string name="einstellungenbearbeiten_route_directory" > Route</string>
     <string name="einstellungenbearbeiten_route_directory_desc" >Path to Route directory</string>
    <string name="einstellungenbearbeiten_track_directory" >Track</string>
    <string name="einstellungenbearbeiten_track_directory_desc" >Path to Track directory</string>
    <string name="preferences_show_route_point_symbols">Show route point symbols</string>
    <string name="preferences_showroute_point_sybols_desc">Show the route point symbols and enumeration on the map</string>
    <string name="preferences_map">Map settings</string>
    <string name="preferences_map_view_mode">Map mode</string>
	<string name="preferences_map_view_mode_desc">Select the operating mode</string>
	<string name="preferences_map_filename_desc">Show path to the actual map file</string>
    <string name="pref_mapfilename">mapfilename</string>
    <string name="pref_shipname">shipname</string>
    <string name="pref_alarmradius">alarmradius</string>
    <string name="pref_mapCenterLAT">mapCenterLAT</string>
	<string name="pref_mapCenterLON">mapCenterLON</string>
	<string name="pref_OwnShipLAT">OwnShipLAT</string>
	<string name="pref_OwnShipLON">OwnShipLON</string>
	<string name="pref_username">username</string>
	<string name="pref_password">password</string>
	<string name="pref_bthost">bthost</string>
	<string name="pref_btaddress">bt_address</string>
    <string name="pref_host">host</string>
	<string name="pref_port">port</string>
	<string name="pref_deactivate_old_targets">deactivateoldtargets</string>
	<string name="pref_delete_old_targets">deleteoldtargets</string>
	<string name="pref_show_ship_data">showshipdata</string>
	<string name="pref_show_sattelite_map">showsattelitemap</string>
	<string name="pref_use_gps_source">usegpssource</string>
	<string name="pref_save_position_data">savepositiondata</string>
	<string name="pref_data_directory_key">datadirectory</string>
	<string name="pref_map_directory_key">mapdirectory</string>
	<string name="pref_track_directory_key">trackdirectory</string>
	<string name="pref_backup_ser_directory_key">backupsercachedirectory</string>
	<string name="pref_backup_sercache_key">backupsercache</string>
	<string name="pref_route_directory_key">routedirectory</string>
	<string name="pref_online_cache_directory_key">onlinecachedirectory</string>
	<string name="pref_show_route_point_symbols">showroutepointsymbols</string>
    <string name="scanning">scanning for devices...</string>
    <string name="select_device">select a device to connect</string>
    <string name="none_paired">No devices have been paired</string>
    <string name="none_found">No devices found</string>
    <string name="title_paired_devices">Paired Devices</string>
    <string name="title_other_devices">Other Available Devices</string>
    <string name="button_scan">Scan for devices</string>
    <string name="flag_btn">Flag: %s</string>
	<string name="monitoring_title">"Monitoring"</string>
	<string name="clear_log">Clear Log</string>
	<string name="route_new_route">new route</string>
	<string name="route_save_route">save route</string>
	<string name="route_delete_route">delete route</string>
	<string name="route_edit_route">edit route</string>
	<string name="route_load_route">load route</string>
	<string name="route_show_route">show route as text</string>
	<string name="route_trace_route">trace route</string>
	<string name="route_show_route_without_points">show route without points</string>
    <string name="menu_track">Track</string>
	<string name="track_load_track">load track</string>
</resources>